<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.treebase.oai</groupId>
  <artifactId>oai-pmh_data_provider</artifactId>
  <packaging>pom</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>oai-pmh_data_provider</name>
  <url>http://maven.apache.org</url>
  <developers>
    <developer>
      <id>youjun</id>
      <name>Youjun Guo</name>
      <email>youjun.guo@yale.edu</email>
      <organization>Peabody.Yale</organization>
      <organizationUrl>http://www.yale.edu</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-7</timezone>
    </developer>
  </developers>
    <licenses>
    <license>
      <name></name>
      <url></url>
      <distribution></distribution>
      <comments/>
    </license>
  </licenses>
  <modules>
  	<!-- module>data_provider_core</module -->
  	<module>data_provider_web</module>
  </modules>
<pluginRepositories>
  </pluginRepositories>
 <dependencies>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>4.3.30.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>4.3.30.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>4.3.30.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>4.3.30.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>4.3.30.RELEASE</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

     <!--
       Replaced to satisfy the GitHub dependabot but not addressed in code... this entire module
       is not built, but if it is added all logging needs to be addressed.
     -->
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
         <version>2.24.3</version>
     </dependency>
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>2.24.3</version>
     </dependency>

     <!-- SLF4J 2.x for compatibility with Log4j 2.24.3 -->
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>2.0.16</version>
     </dependency>

     <!-- Log4j 2.x SLF4J binding -->
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j2-impl</artifactId>
         <version>2.24.3</version>
     </dependency>

 </dependencies>
 
 <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-report-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-clover-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <configuration>
          <tags>
            <tag>TODO</tag>
            <tag>@todo</tag>
            <tag>FIXME</tag>
            <tag>XXX</tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
      </plugin>
    </plugins>
  </reporting>
  
  <dependencyManagement>
     <dependencies>
     
     	<dependency>
	  <groupId>org.treebase.oai</groupId>
        <artifactId>data_provider_web</artifactId>
        <version>${project.version}</version>
     	</dependency>
     </dependencies>
  </dependencyManagement>
  
  <organization>
    <name></name>
    <url></url>
  </organization>
  
  <!-- order of repositories used to compile the project -->
  <repositories>

    <!-- TreeBASE gh-pages repository - checked FIRST for internal artifacts -->
    <repository>
      <id>treebase-github</id>
      <name>TreeBASE GitHub Pages Maven Repository</name>
      <url>https://treebase.github.io/treebase/repository</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>maven2</id>
      <name>Default Maven2 Repository</name>
      <url>https://repo1.maven.org/maven2</url>
    </repository>

    <repository>
      <id>repository.jboss.org</id>
      <name>JBoss Maven Repository</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/maven2</url>
      <layout>default</layout>
    </repository>

    <!-- GBIF host NexML, Mesquite and CQL-Java in order for this to build -->
    <repository>
      <id>gbif-third-party</id>
      <name>GBIF hosted third party jars</name>
      <url>https://repository.gbif.org/repository/thirdparty/</url>
    </repository>

  </repositories>
  <!-- Java 17 LTS configuration -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <release>17</release>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <!-- Use stateless test set runner for better JUnit 4 support -->
          <useSystemClassLoader>true</useSystemClassLoader>
          <useManifestOnlyJar>false</useManifestOnlyJar>
          <testFailureIgnore>false</testFailureIgnore>
          <!-- JVM arguments for Java 17 compatibility with older libraries -->
          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <distributionManagement>
    <site>
      <id>website</id>
      <url></url>
    </site>
  </distributionManagement>
  
  <profiles>
    
  </profiles>
</project>
